--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.441.0",
-    "next": "14.2.5",
+    "next": "^14.2.32",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
